# UILess

./: .gitignore  readme  req.txt  slides.odp  tstcm.json
assets/: ImGui.cpp
cpp/: CMakeLists.txt
cpp/include/: cmdThread.hpp  cmd_thread.hpp  colors.h  colors.hpp  command.h  commandHandler.hpp  commandSpec.hpp  imGui.hpp  node.hpp  osHelper.hpp  oshelper.hpp  pipelineRunner.hpp  result.hpp  tokenizer.hpp  tree.hpp
cpp/src/: cmdThread.cpp  cmd_thread.cpp  commandHandler.cpp  commandSpec.cpp  dragdrop.cpp  imGui.cpp  main.cpp  osHelper.cpp  oshelper.cpp  pipelineRunner.cpp  result.cpp  tokenizer.cpp
cpp/tests/: pipelineTests.cpp  test_thread.cpp  tests.cpp  threadingTests.cpp
demo/: cv.txt  demo.md
python/: main.py
python/scripts/: emojiGrabber.py
python/src/: command.py  command_manager.py  outputObj.py  output_obj.py  parser.py  pipelineExecutor.py  pipeline_executor.py
python/test/: tstcm.json
shaders/: blur.glsl
